// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should correctly provide the style and className props in the children callback function 1`] = `
<div
  class="md-grid"
/>
`;

exports[`Grid should correctly provide the style and className props in the children callback function 2`] = `
<div
  class="md-grid boop"
  style="width: 500px; background: red;"
/>
`;

exports[`Grid should correctly update after props change 1`] = `
<div
  class="md-grid"
/>
`;

exports[`Grid should correctly update after props change 2`] = `
<div
  class="md-grid md-grid--stacked"
/>
`;

exports[`Grid should correctly update after props change 3`] = `
<div
  class="md-grid test"
/>
`;

exports[`Grid should correctly update after props change 4`] = `
<div
  class="md-grid md-grid--look-at-me"
/>
`;

exports[`Grid should correctly update after props change 5`] = `
<div
  class="md-grid md-grid--no-spacing"
/>
`;

exports[`Grid should correctly update after props change 6`] = `
<div
  class="md-grid md-grid--16-16"
/>
`;

exports[`Grid should correctly update after props change 7`] = `
<div
  class="md-grid"
/>
`;

exports[`Grid should render correctly with the different props applied 1`] = `
<div
  className="md-grid md-grid--stacked"
  style={undefined}
/>
`;

exports[`Grid should render correctly with the different props applied 2`] = `
<div
  className="md-grid md-grid--stacked md-grid--no-spacing"
  style={undefined}
/>
`;

exports[`Grid should render correctly with the different props applied 3`] = `
<div
  className="md-grid md-grid--stacked md-grid--no-spacing md-grid--look-at-me"
  style={undefined}
/>
`;

exports[`Grid should render correctly with the different props applied 4`] = `
<div
  className="md-grid md-grid--48-16"
  style={undefined}
/>
`;

exports[`Grid should render correctly without any props 1`] = `
<div
  className="md-grid"
  style={undefined}
/>
`;

exports[`Grid should render correctly without any props 2`] = `
<div
  className="md-grid"
  style={undefined}
>
  <span />
</div>
`;
